# insurance-frequency-severity

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  run_coverage_gaps_tests.py  run_integration_tests_databricks.py  run_tests_databricks.py
.github/workflows/: docs.yml
benchmarks/: README.md  benchmark_insurance_frequency_severity.py
docs/api/: index.html  insurance_frequency_severity.html  search.js
docs/api/insurance_frequency_severity/: dependent.html
notebooks/: benchmark.py  databricks_validation.py  demo_joint_freq_sev.py  fremtpl2_joint_freqsev.py  quickstart.ipynb  run_tests.py
src/insurance_frequency_severity/: __init__.py  copula.py  diagnostics.py  joint.py  report.py
src/insurance_frequency_severity/dependent/: __init__.py  benchmarks.py  data.py  diagnostics.py  model.py  premium.py  training.py  wrapper.py
tests/: conftest.py  test_copula.py  test_copula_gaps.py  test_coverage_expansion.py  test_coverage_gaps.py  test_diagnostics.py  test_integration.py  test_joint.py  test_report.py
tests/dependent/: conftest.py  test_benchmarks.py  test_data.py  test_diagnostics.py  test_model.py  test_premium.py  test_training.py  test_wrapper.py
