[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-frequency-severity"
version = "0.2.9"
description = "Joint frequency-severity modelling for insurance pricing: Sarmanov copula, compound distributions, and neural two-part models for UK personal lines claims."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Burning Cost", email = "pricing.frontier@gmail.com"}
]
keywords = [
    "insurance",
    "actuarial",
    "frequency severity",
    "frequency-severity",
    "claim frequency",
    "claim severity",
    "claims modelling",
    "loss modelling",
    "copula",
    "sarmanov",
    "compound distribution",
    "tweedie",
    "poisson",
    "gamma",
    "glm",
    "pricing",
    "UK",
    "personal lines",
    "neural network",
    "multi-task learning",
    "joint model",
    "dependence",
    "loss ratio",
    "pure premium",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14.5",
    "matplotlib>=3.6",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
neural = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://burning-cost.github.io/libraries/insurance-frequency-severity/"
Documentation = "https://burning-cost.github.io/libraries/insurance-frequency-severity/"
Repository = "https://github.com/burning-cost/insurance-frequency-severity"
"Bug Tracker" = "https://github.com/burning-cost/insurance-frequency-severity/issues"
Changelog = "https://github.com/burning-cost/insurance-frequency-severity/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_frequency_severity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
